Add ViewWrite.clear() method